kubernetes/policies/allowed-image-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: allowed-image-registries
spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: validate-image-registry
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - image-processing
                - image-processing-prod

      validate:
        message: "Obrazy mogą pochodzić wyłącznie z dozwolonego Artifact Registry lub Cloud SQL Proxy registry."

        foreach:
          - list: "request.object.spec.containers"
            anyPattern:
              - image: "europe-central2-docker.pkg.dev/gcp-image-pub-sub/*"
              - image: "gcr.io/cloud-sql-connectors/cloud-sql-proxy:*"
