kubernetes/policies/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: require-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - image-processing
                - image-processing-prod

      validate:
        message: "Kontenery muszą działać jako użytkownik inny niż root."
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
