kubernetes/policies/require-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources
spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: require-cpu-memory-requests-limits
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - image-processing
                - image-processing-prod

      validate:
        message: "Każdy kontener musi mieć ustawione requests i limits dla CPU oraz pamięci."
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    cpu: "?*"
                    memory: "?*"
                  limits:
                    cpu: "?*"
                    memory: "?*"
